syntax = "proto3";
option go_package = "relay/scripts";

service IOP{

    rpc getPermittedNetworkInfo(PermittedNetworkAddress) returns (stream PermittedNetworkInfo);
    rpc InvokePermittedMethod(MethodInfo) returns (MethodResponse);
    rpc getPermittedMethodsList(PermittedNetworkId) returns (stream MethodInfo);
}
message PermittedNetworkInfo{
    string network_name = 1;
    string network_id = 2;
    string network_address= 3;
    string network_IP = 4;
    string company_name = 5;
}


message PermittedNetworkId{
    string network_id = 1;
}

message PermittedNetworkAddress{
    string address = 1;
}

message MethodResponse{
    string error = 1;
    string response = 2;
}

message MethodInfo{
//  Exposed Method Info
    string name = 1;
    string method_input = 2;
    string method_output = 3;
    string channelName = 4;
    string chaincodeName = 5;
}