syntax = "proto3";
option go_package = "relay/scripts";

service IOP{

    rpc getNetworkInfo(OutsiderNetworkId) returns (OutsiderNetworkInfo);
    rpc invoke(MethodInfo) returns (response);
    rpc queryMethods(OutsiderNetworkId) returns (stream MethodInfo);
}
message OutsiderNetworkInfo{
    string network_username = 1;
    string network_id = 2;
    string network_password= 3;
    string network_IP = 4;
}
message OutsiderNetworkId{
    string network_id = 1;
}
message OutsiderNetworkUsername{
    string name = 1;
}
message response{
    string status = 1;
    string response_str = 2;
}

message MethodInfo{
//  Exposed Method Info
    string method_name = 1;
    string method_type = 2;
    string method_input = 3;
    string method_output = 4;
    string method_Id = 5;
    string channelName = 6;
    string chaincodeName = 7;
//User Info
    OutsiderNetworkId network = 8;

}